<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.dashboard.DashboardFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="1dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:contentDescription="@string/logo_sklh"
            android:src="@drawable/logo" />

        <Space
            android:layout_width="5dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/nmaSklh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nma_sklh"
            android:textColor="#2A6D7E"
            android:textSize="25sp"
            android:textStyle="bold" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="#2A6D7E" />

    <ImageButton
        android:id="@+id/menu_back"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:contentDescription="@string/menu_bank"
        android:src="@drawable/baseline_arrow_back_24"
        android:backgroundTint="@android:color/transparent"
        android:padding="20dp" />

    <EditText
        android:id="@+id/namakuis"
        android:layout_width="364dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:background="@drawable/solid_rec"
        android:hint="@string/namakuishint"
        android:inputType="text"
        android:padding="16dp"
        android:text="@string/namakuis"
        android:textColor="@color/blue"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pengaturan1"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:textColor="@color/blue"
        android:textSize="20sp" />


    <Spinner
        android:id="@+id/spinner_jumlahsoal"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_gravity="right"
        android:layout_marginTop="-30dp"
        android:layout_marginRight="28dp"
        android:spinnerMode="dropdown"
        android:background="@drawable/spinner_background"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pengaturan2"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:textColor="@color/blue"
        android:textSize="20sp" />


    <Spinner
        android:id="@+id/spinner_waktu"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_gravity="right"
        android:layout_marginTop="-30dp"
        android:layout_marginRight="28dp"
        android:spinnerMode="dropdown"
        android:background="@drawable/spinner_background"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pengaturan3"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:textColor="@color/blue"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/spinner_topik"
        android:layout_width="364dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:spinnerMode="dropdown"
        android:background="@drawable/spinner_background"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btntmbh"
        android:background="@drawable/buttonunggah"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="150dp"
        android:text="@string/unggahkuis"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textAllCaps="false" />

    <TextView
        android:id="@+id/text_dashboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

</LinearLayout>

