<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.notifications.NotificationsFragment">


    <LinearLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="1dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:contentDescription="@string/logo_sklh"
            android:src="@drawable/logo" />

        <Space
            android:layout_width="5dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/nmaSklh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nma_sklh"
            android:textColor="#2A6D7E"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:id="@+id/garisheader"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="#2A6D7E" />

    <TextView
        android:id="@+id/hallog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="35dp"
        android:text="@string/helloguru"
        android:textColor="@color/blue"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/headerLayout" />

    <TextView
        android:id="@+id/kelasg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:text="@string/kelasguru"
        android:textColor="@color/blue"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/hallog" />

    <TextView
        android:id="@+id/dftrkuis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="30dp"
        android:text="@string/dfrkuis"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/kelasg" />

    <View
        android:id="@+id/garis"
        android:layout_width="360dp"
        android:layout_height="3dp"
        android:layout_gravity="center"
        android:background="#2A6D7E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dftrkuis" />

    <!-- Card View -->
    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        app:cardCornerRadius="12dp"
        app:layout_constraintTop_toBottomOf="@id/headerLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/img_photo"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:background="@drawable/bgcard"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="@string/Jumlah_kuis"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_topik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:ellipsize="end"
                android:maxLines="5"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="@string/nama_Kuis"
                app:layout_constraintTop_toBottomOf="@id/tv_name"
                app:layout_constraintBottom_toBottomOf="@id/tv_tanggal"
                app:layout_constraintStart_toStartOf="@id/tv_name"
                app:layout_constraintEnd_toEndOf="@id/tv_name"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/tv_tanggal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:text="@string/tanggal"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/tv_topik"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/text_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

</LinearLayout>
